solutions section responsive

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 </div>
             </section>
             <!-- /.home -->
-            <section class="solutions none">
+            <section class="solutions">
                 <div class="container">
                     <div class="solutions-header">
                         <h3 class="title-upper">Fast Solutions</h3>
