find section responsive

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                 </div>
             </section>
             <!-- /.solutions -->
-            <section class="find none">
+            <section class="find">
                 <div class="container">
                     <div class="find-row">
                         <div class="find-row-left">
