schedule section responsive

--- a/index.html
+++ b/index.html
@@ -254,18 +254,18 @@
                 </div>
             </section>
             <!-- /.find -->
-            <section class="shedule none">
+            <section class="schedule">
                 <div class="container">
-                    <div class="shedule-row">
-                        <div class="shedule-left">
+                    <div class="schedule-row">
+                        <div class="schedule-left">
                             <img
                                 src="./img/shedule-section/shedule-img.png"
-                                alt="Shedule Doctor"
+                                alt="Schedule Doctor"
                             />
                         </div>
-                        <div class="shedule-right">
-                            <div class="shedule-content">
-                                <h3 class="title-upper">Make a Shedule</h3>
+                        <div class="schedule-right">
+                            <div class="schedule-content">
+                                <h3 class="title-upper">Make a Schedule</h3>
                                 <h2 class="title">
                                     Make a schedule in advance with the
                                     available doctor
@@ -277,11 +277,11 @@
                                     HealhtyCarely makes it easier for everyone
                                     to schedule a doctor’s appointment.
                                 </p>
-                                <ul class="shedule-list">
+                                <ul class="schedule-list">
                                     <li>Make a schedule online is easy</li>
                                     <li>Easy to connect with doctor</li>
                                 </ul>
-                                <div class="shedule-content-btn">
+                                <div class="schedule-content-btn">
                                     <a href="#" class="btn btn-big">
                                         Make Schedule Now!
                                     </a>
