rating section responsive

--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                 </div>
             </section>
             <!-- /.shedule -->
-            <section class="rating none">
+            <section class="rating">
                 <div class="container">
                     <div class="rating-header">
                         <h3 class="title-upper">Our Rating</h3>
