feedback section responsive

--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
                 </div>
             </section>
             <!-- /.rating -->
-            <section class="feedback none">
+            <section class="feedback">
                 <div class="container">
                     <div class="feedback-header">
                         <h2 class="title">Our patients feedback about us</h2>
