footer section responsive

--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
             <!-- /.feedback -->
         </main>
         <!-- Footer -->
-        <footer class="footer none">
+        <footer class="footer">
             <div class="container">
                 <div class="footer-row">
                     <div class="footer-left">
