--- a/index.html
+++ b/index.html
@@ -29,11 +29,29 @@
                         <a href="#" class="header-login-link">Sign In</a>
                         <a href="#" class="btn">Sign Up</a>
                     </div>
+                    <!-- Mobile Burger -->
+                    <div class="menu-burger">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </div>
                 </div>
             </div>
         </header>
-        <!-- Mobile Navbar -->
-
+        <!-- Header Nav Mobile -->
+        <div class="header-nav-mobile">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Doctor</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Review</a></li>
+                <li>
+                    <a href="#">Sign In</a>
+                    <span>or</span>
+                    <a href="#">Sign Up</a>
+                </li>
+            </ul>
+        </div>
         <!-- Main -->
         <main>
             <section class="home">
@@ -452,5 +470,7 @@
                 </div>
             </div>
         </footer>
+        <!-- Javascript's -->
+        <script src="./js/main.js"></script>
     </body>
 </html>
