--- a/index.html
+++ b/index.html
@@ -357,25 +357,25 @@
                     </div>
                     <!-- /.feedback-header -->
                     <div class="feedback-content">
-                        <div class="feedback-left">
-                            <img
-                                src="./img/feedback-section/person-1.png"
-                                alt="Person"
-                            />
+                        <div class="feedback-left persona-image">
                         </div>
                         <div class="feedback-right">
-                            <div class="person-text">
-                                <p>
-                                    “Healthycarely is an website and mobile app
-                                    for you to feel better or get medical help.
-                                    We offer you a 24/7 doctor service with no
-                                    appointment needed”
-                                </p>
+                            <div class="person-text persona-feedback">
                             </div>
                             <div class="slide">
                                 <div class="person-name">
-                                    <h2>Naufal Hidayat</h2>
-                                    <p>Student at Telkom University</p>
+                                </div>
+                                <div class="person-slide">
+                                    <img
+                                        src="./img/icons/long_left.png"
+                                        alt="Arrow Left"
+                                        class="arrow-left"
+                                    />
+                                    <img
+                                        src="./img/icons/long_right.png"
+                                        alt="Arrow Right"
+                                        class="arrow-right"
+                                    />
                                 </div>
                             </div>
                         </div>
